--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
     "replicate": "^0.29.1",
+    "stripe": "^15.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.0",
