--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crisp-sdk-web": "^1.0.25",
     "lucide-react": "^0.371.0",
     "next": "14.2.2",
     "openai": "^4.38.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.29.1",
     "stripe": "^15.4.0",
