--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "stripe": "^15.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "zod": "^3.23.0",
     "zustand": "^4.5.2"
   },
